fixed overflow

--- a/styles.css
+++ b/styles.css
@@ -128,6 +128,8 @@ footer {
     /* 16:9 aspect ratio */
     padding-top: 56.25%;
     position: relative;
+    margin: 0px;
+    max-width: 100%;
 }
 
 .iframe-container iframe {
@@ -137,4 +139,5 @@ footer {
     position: absolute;
     top: 0;
     width: 100%;
+    margin-top: -40px;
 }
